--- a/paper/references.bib
+++ b/paper/references.bib
@@ -248,3 +248,14 @@
   year = {1978},
   pages = {461--464}
 }
+
+@article{gelman2006prior,
+  title = {Prior distributions for variance parameters in hierarchical models},
+  volume = {1},
+  number = {3},
+  journal = {Bayesian Analysis},
+  publisher = {Institute of Mathematical Statistics},
+  author = {Gelman,  Andrew},
+  year = {2006},
+  pages = {515--534}
+}
