--- a/paper/references.bib
+++ b/paper/references.bib
@@ -100,7 +100,6 @@
   publisher = {Chapman and Hall/CRC},
   isbn = {978-1032234953},
   year = {2023}
-  %url = {https://mclust-org.github.io/book/},
 }
 
 @article{raftery2006variable,
@@ -131,6 +130,7 @@
   publisher = {Wiley},
   author = {Baumer,  Benjamin S. and Matthews,  Gregory J. and Nguyen,  Quang},
   year = {2023},
+  pages = {e1612}
 }
 
 @article{kovalchik2023player,
@@ -139,7 +139,7 @@
   journal = {Annual Review of Statistics and Its Application},
   volume = {10},
   number = {1},
-  pages = {677-697},
+  pages = {677--697},
   year = {2023}
 }
 
